# UrFOTk

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
database/: .env  Dockerfile
db_data/base/1/: 1259  1259_vm  13402  13412  13417  2579  2600_vm  2602_vm  2603_vm  2606_vm  2609_vm  2610  2610_vm  2612_vm  2615  2616_vm  2619  2619_fsm  2619_vm  2666  2681  2682  2696  2840  2840_vm  2841  3395  3456  3456_vm  3600  3600_vm  3602  3605  pg_internal.init
db_data/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13398  13398_fsm  13398_vm  13402  13403  13403_fsm  13403_vm  13408  13408_fsm  13408_vm  13413  13413_fsm  2228  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  2601_vm  2602  2602_fsm  2602_vm  2603  2603_fsm  2603_vm  2605  2605_fsm  (+137 more)
db_data/base/4/: 1247  1247_vm  1255  1255_vm  1259  13407  2601_vm  2605_vm  2606  2607_vm  2609  2612  2615_vm  2619  2619_vm  2664  2665  2674  2675  2679  2690  2692  2693  2703  2836  2836_vm  2839  2841  3079  3080  3081  3085  3164  3394  3603  3603_vm  3608  3609  3764_vm  3766  (+1 more)
db_data/base/5/: 1249  1249_vm  13398  13403  2608  2608_vm  2618  2618_vm  2658  2659  2662  2663  2667  2673  2678  2684  2685  2691  2696  2704  2753_vm  2837  2838  2838_vm  2840  2840_vm  (+9 more)
db_data/global/: 1213_vm  1260  1260_vm  1261  1261_vm  1262  2396_vm  2671  2672  pg_control  pg_internal.init
db_data/pg_stat/: pgstat.stat
fastApi/: .env  main.py  yolo_det.py
fastApi/database/: connect.py  crud.py  models.py  schema.py
frontend/: .env  .gitignore  package-lock.json  package.json  tailwind.config.js  vue.config.js
frontend/public/: index.html
frontend/src/: icons.js  main.js
models/: app.py
models/data/: model_loader.py
(+33 files in other folders)
