[tool.poetry]
name = "urfotk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.30"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
fastapi = "^0.111.0"
loguru = "^0.7.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
opencv-python = "^4.9.0.80"
huggingface-hub = "^0.23.0"
gradio = "^4.31.4"
transformers = "^4.41.0"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
