[tool.poetry]
name = "urfotk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.9.0.80"
gradio = "^4.31.4"
cython = "0.29.20"
loguru = "^0.7.2"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
psycopg2 = "^2.9.9"
onnxruntime = "^1.18.0"
openvino = "^2024.1.0"
pyclipper = "^1.3.0.post5"
shapely = "^2.0.4"
torchvision = "^0.18.0"
torch = "^2.3.0"
albumentations = "^1.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
